--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: node_js
 node_js:
  - "4.1"
+install:
+ - npm install
+ - npm install -g gulp
+ - npm install -g typings
+ - typints install
 script:
  - npm test
  - gulp lint
