major code cleanup, introduce limited csharp parser

--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
   },
   "homepage": "https://github.com/vintage-software/vstack-typescript-generator#readme",
   "dependencies": {
-    "ts-runner": "0.2.0"
+    "ts-runner": "0.3.0"
   },
   "devDependencies": {
     "gulp": "3.9.1",
     "gulp-tslint": "4.3.5",
     "gulpclass": "0.1.0",
     "jasmine-node": "1.14.5",
+    "path": "^0.12.7",
     "tslint": "3.7.4",
     "typings": "0.7.12"
   }
