--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/vintage-software/vstack-typescript-generator#readme",
   "dependencies": {
+    "pluralize": "^1.2.1",
     "ts-runner": "0.3.0"
   },
   "devDependencies": {
