--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "del": "2.2.0",
     "gulp": "3.9.1",
     "gulp-diff": "1.0.0",
+    "gulp-ignore": "^2.0.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-tslint": "4.3.5",
     "gulp-typescript": "2.13.0",
