--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES5",
-    "module": "system",
+    "module": "commonjs",
     "moduleResolution": "node",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
@@ -9,9 +9,10 @@
     "removeComments": true,
     "noImplicitAny": false,
     "declaration": true,
-    "outFile": "./bundles/index.js"
+    "outDir": "./dist",
+    "types": ["jasmine"]
   },
-  "files": [
-    "./src/index.ts"
+  "exclude": [
+    "node_modules"
   ]
 }
