--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "dist/src/index.js",
   "scripts": {
-    "patch-release": "npm version patch & npm publish & git push --follow-tags",
-    "minor-release": "npm version minor & npm publish & git push --follow-tags",
+    "patch-release": "npm version patch && npm publish && git push --follow-tags",
+    "minor-release": "npm version minor && npm publish && git push --follow-tags",
     "clean": "rimraf dist & rimraf bundles",
     "lint": "tslint \"src/**/*.ts\"",
     "build": "npm run clean & tsc -p tsconfig.json",
-    "test": "istanbul cover node_modules/jasmine/bin/jasmine.js & npm run remap-coverage",
+    "test": "istanbul cover node_modules/jasmine/bin/jasmine.js && npm run remap-coverage",
     "remap-coverage": "npm run remap-coverage-json & npm run remap-coverage-html",
     "remap-coverage-json": "remap-istanbul -i coverage/coverage.json -o coverage/coverage-remapped.json",
     "remap-coverage-html": "remap-istanbul -i coverage/coverage-remapped.json -o coverage/lcov-report-remapped -t html",
