--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "patch-release": "npm version patch && npm publish && git push --follow-tags",
     "minor-release": "npm version minor && npm publish && git push --follow-tags",
-    "clean": "rimraf dist & rimraf bundles",
+    "clean": "rimraf dist",
     "lint": "tslint \"src/**/*.ts\"",
     "build": "npm run clean & tsc -p tsconfig.json",
     "test": "istanbul cover node_modules/jasmine/bin/jasmine.js",
