--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vstack-typescript-generator",
   "version": "0.1.8",
-  "description": "",
+  "description": "Tool to generate TypeScript interfaces and TypeScript filter classes for Vstack from C# sources.",
   "main": "dist/src/index.js",
   "scripts": {
     "patch-release": "npm version patch && npm publish && git push --follow-tags",
