--- a/package.json
+++ b/package.json
@@ -40,6 +40,6 @@
     "remap-istanbul": "0.6.4",
     "rimraf": "2.5.4",
     "tslint": "3.7.4",
-    "typescript": "^2.0.0"
+    "typescript": "2.0.0"
   }
 }
