--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,10 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "declaration": true,
-    "outDir": "./dist",
-    "types": ["jasmine"]
-  },
-  "exclude": [
-    "node_modules"
-  ]
+    "outDir": "./dist"
+  }
 }
