--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,13 @@
 {
-    "editor.tabSize": 4,
-    "editor.detectIndentation": false,
-    "typescript.tsdk": "./node_modules/typescript/lib"
+  "editor.tabSize": 2,
+  "editor.insertSpaces": true,
+  "editor.trimAutoWhitespace": true,
+  "files.exclude": {
+    "**/.git": true,
+    "**/node_modules": true
+  },
+  "search.exclude": {
+    "**/dist/": true
+  },
+  "typescript.tsdk": "./node_modules/typescript/lib"
 }
