--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "minor-release": "yarn version minor && yarn publish && git push --follow-tags",
     "clean": "rimraf dist & rimraf coverage",
     "lint": "tslint \"src/**/*.ts\"",
-    "build": "yarn run clean & tsc -p tsconfig.json",
+    "build": "yarn run clean & yarn run build:typescript",
+    "build:typescript": "tsc --project tsconfig.json",
     "test": "istanbul cover node_modules/jasmine/bin/jasmine.js",
     "remap-coverage": "yarn run remap-coverage-json & yarn run remap-coverage-html",
     "remap-coverage-json": "remap-istanbul -i coverage/coverage.json -o coverage/coverage-remapped.json",
