--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "vstack-typescript-generator",
   "version": "0.1.10",
   "description": "Tool to generate TypeScript interfaces and TypeScript filter classes for Vstack from C# sources.",
-  "main": "dist/src/index.js",
+  "main": "dist/src/tsgen.js",
+  "bin": {
+    "tsgen": "dist/src/tsgen-cli.js"
+  },
   "scripts": {
     "patch-release": "yarn version patch && yarn publish && git push --follow-tags",
     "minor-release": "yarn version minor && yarn publish && git push --follow-tags",
@@ -10,7 +13,10 @@
     "lint": "tslint \"src/**/*.ts\"",
     "build": "yarn run clean & yarn run build:typescript",
     "build:typescript": "tsc --project tsconfig.json",
-    "test": "istanbul cover node_modules/jasmine/bin/jasmine.js",
+    "test": "yarn run test:spec && yarn run test:generate && yarn run test:compare",
+    "test:spec": "istanbul cover node_modules/jasmine/bin/jasmine.js",
+    "test:generate": "node dist/src/tsgen-cli.js test-project/tsgen-outdir.json && node dist/src/tsgen-cli.js test-project/tsgen-outfile.json",
+    "test:compare": "dircompare -c test-project/generated test-project/test-generated",
     "remap-coverage": "yarn run remap-coverage-json & yarn run remap-coverage-html",
     "remap-coverage-json": "remap-istanbul -i coverage/coverage.json -o coverage/coverage-remapped.json",
     "remap-coverage-html": "remap-istanbul -i coverage/coverage-remapped.json -o coverage/lcov-report-remapped -t html",
@@ -31,11 +37,17 @@
   "homepage": "https://github.com/vintage-software/vstack-typescript-generator#readme",
   "dependencies": {
     "camelcase": "4.0.0",
+    "globby": "6.1.0",
+    "mkdirp": "0.5.1",
     "pluralize": "3.0.0"
   },
   "devDependencies": {
     "@types/jasmine": "2.5.38",
+    "@types/mkdirp": "0.3.29",
+    "@types/node": "7.0.4",
+    "@types/rimraf": "0.0.28",
     "codecov": "1.0.1",
+    "dir-compare": "1.3.0",
     "istanbul": "0.4.5",
     "jasmine": "2.5.2",
     "remap-istanbul": "0.8.0",
