--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,9 @@
     "noUnusedParameters": true,
     "declaration": true,
     "outDir": "./dist"
-  }
+  },
+  "include": [
+    "src/**/*",
+    "spec/**/*"
+  ]
 }
