--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "tsgen": "dist/src/tsgen-cli.js"
   },
   "scripts": {
-    "patch-release": "npm version patch && npm publish && git push --follow-tags",
-    "minor-release": "npm version minor && npm publish && git push --follow-tags",
+    "patch-release": "npm run lint && npm run build && npm test && npm version patch && npm publish && git push --follow-tags",
+    "minor-release": "npm run lint && npm run build && npm test && npm version minor && npm publish && git push --follow-tags",
     "clean": "rimraf dist & rimraf coverage",
     "lint": "tslint \"src/**/*.ts\"",
     "build": "yarn run clean & yarn run build:typescript",
