--- a/package.json
+++ b/package.json
@@ -7,19 +7,18 @@
     "tsgen": "dist/src/tsgen-cli.js"
   },
   "scripts": {
-    "patch-release": "npm run lint && npm run build && npm test && npm version patch && npm publish && git push --follow-tags",
-    "minor-release": "npm run lint && npm run build && npm test && npm version minor && npm publish && git push --follow-tags",
+    "patch-release": "npm test && npm version patch && npm publish && git push --follow-tags",
+    "minor-release": "npm test && npm version minor && npm publish && git push --follow-tags",
     "clean": "rimraf dist & rimraf coverage",
     "lint": "tslint \"src/**/*.ts\"",
-    "build": "yarn run clean & yarn run build:typescript",
-    "build:typescript": "tsc --project tsconfig.json",
+    "prebuild": "yarn run clean && yarn run lint",
+    "build": "tsc --project tsconfig.json",
+    "pretest": "yarn run build",
     "test": "yarn run test:spec && yarn run test:generate && yarn run test:compare",
     "test:spec": "istanbul cover node_modules/jasmine/bin/jasmine.js",
     "test:generate": "node dist/src/tsgen-cli.js test-project/tsgen-outdir.json && node dist/src/tsgen-cli.js test-project/tsgen-outfile.json",
     "test:compare": "dircompare -c test-project/generated test-project/test-generated",
-    "remap-coverage": "yarn run remap-coverage-json & yarn run remap-coverage-html",
-    "remap-coverage-json": "remap-istanbul -i coverage/coverage.json -o coverage/coverage-remapped.json",
-    "remap-coverage-html": "remap-istanbul -i coverage/coverage-remapped.json -o coverage/lcov-report-remapped -t html",
+    "posttest": "remap-istanbul -i coverage/coverage.json -o coverage -t html",
     "report-coverage": "codecov"
   },
   "repository": {
