--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@types/mkdirp": "0.3.29",
     "@types/node": "7.0.8",
     "@types/rimraf": "0.0.28",
-    "codecov": "2.1.0",
+    "codecov.io": "0.1.6",
     "dir-compare": "1.3.0",
     "istanbul": "0.4.5",
     "jasmine": "2.5.3",
