--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:generate": "node dist/src/tsgen-cli.js test-project/tsgen-outdir.json && node dist/src/tsgen-cli.js test-project/tsgen-outfile.json",
     "test:compare": "dircompare -c test-project/generated test-project/test-generated",
     "posttest": "remap-istanbul -i coverage/coverage.json -o coverage -t html",
-    "report-coverage": "codecov -f coverage/*.json"
+    "report-coverage": "cat ./coverage/lcov.info | codecov"
   },
   "repository": {
     "type": "git",
@@ -45,7 +45,7 @@
     "@types/mkdirp": "0.3.29",
     "@types/node": "7.0.8",
     "@types/rimraf": "0.0.28",
-    "codecov": "2.1.0",
+    "codecov.io": "0.1.6",
     "dir-compare": "1.3.0",
     "istanbul": "0.4.5",
     "jasmine": "2.5.3",
