--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "patch-release": "npm test && npm version patch && npm publish && git push --follow-tags",
     "minor-release": "npm test && npm version minor && npm publish && git push --follow-tags",
     "clean": "rimraf dist & rimraf coverage",
-    "lint": "tslint \"src/**/*.ts\"",
+    "lint": "tslint --project tsconfig.json --type-check",
     "prebuild": "yarn run clean && yarn run lint",
     "build": "tsc --project tsconfig.json",
     "pretest": "yarn run build",
@@ -35,23 +35,23 @@
   "license": "MIT",
   "homepage": "https://github.com/vintage-software/vstack-typescript-generator#readme",
   "dependencies": {
-    "camelcase": "4.0.0",
+    "camelcase": "4.1.0",
     "globby": "6.1.0",
     "mkdirp": "0.5.1",
-    "pluralize": "4.0.0"
+    "pluralize": "5.0.0"
   },
   "devDependencies": {
-    "@types/jasmine": "2.5.46",
+    "@types/jasmine": "2.5.47",
     "@types/mkdirp": "0.3.29",
-    "@types/node": "7.0.8",
+    "@types/node": "7.0.22",
     "@types/rimraf": "0.0.28",
     "codecov.io": "0.1.6",
-    "dir-compare": "1.3.0",
+    "dir-compare": "1.4.0",
     "istanbul": "0.4.5",
-    "jasmine": "2.5.3",
-    "remap-istanbul": "0.9.1",
+    "jasmine": "2.6.0",
+    "remap-istanbul": "0.9.5",
     "rimraf": "2.6.1",
-    "tslint": "4.5.1",
-    "typescript": "2.2.1"
+    "tslint": "5.3.2",
+    "typescript": "2.3.3"
   }
 }
