feat: generate index barrel file (breaking changes)
Files named "generated.ts" and "index.ts" are generated in "outDir." The
"index.ts" file re-exports everything from "generated.ts" and the files pass in
the "exports" config property.

BREAKING CHANGES:

The "references" option is renamed to "imports," and the "outFile" option is
removed.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "pretest": "yarn run build",
     "test": "yarn run test:spec && yarn run test:generate && yarn run test:compare",
     "test:spec": "istanbul cover node_modules/jasmine/bin/jasmine.js",
-    "test:generate": "node dist/src/tsgen-cli.js test-project/tsgen-outdir.json && node dist/src/tsgen-cli.js test-project/tsgen-outfile.json",
+    "test:generate": "rimraf test-project/test-generated && node dist/src/tsgen-cli.js test-project/tsgen.json",
     "test:compare": "dircompare -c test-project/generated test-project/test-generated",
     "posttest": "remap-istanbul -i coverage/coverage.json -o coverage -t html",
     "report-coverage": "cat ./coverage/lcov.info | codecov"
