chore: build with LF, not CRLF, line endings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "declaration": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "newLine": "LF"
   },
   "include": [
     "src/**/*",
