--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "minor-release": "npm test && npm version minor && npm publish && git push --follow-tags",
     "clean": "rimraf dist & rimraf coverage",
     "lint": "tslint --project tsconfig.json --type-check",
-    "prebuild": "yarn run clean && yarn run lint",
+    "prebuild": "npm run clean && npm run lint",
     "build": "tsc --project tsconfig.json",
-    "pretest": "yarn run build",
-    "test": "yarn run test:spec && yarn run test:generate && yarn run test:compare",
+    "pretest": "npm run build",
+    "test": "npm run test:spec && npm run test:generate && npm run test:compare",
     "test:spec": "istanbul cover node_modules/jasmine/bin/jasmine.js",
     "test:generate": "rimraf test-project/test-generated && node dist/src/tsgen-cli.js test-project/tsgen.json",
     "test:compare": "dircompare -c test-project/generated test-project/test-generated",
