--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "remap-istanbul": "0.9.5",
     "rimraf": "2.6.2",
     "tslint": "5.8.0",
+    "tslint-consistent-codestyle": "1.11.0",
     "typescript": "2.6.2"
   }
 }
