chore: update build process, cover e2e tests
kevinphelps/typescript-boilerplate@1c84371d6efd9a97000cabe4d09355c1e1013bfe

--- a/.npmignore
+++ b/.npmignore
@@ -1,12 +1,7 @@
-/.vscode
-/coverage
-/spec
-/src
-/test-project
-/dist/spec
-.gitignore
-.istanbul.yml
-.travis.yml
+.git/
+src/
+coverage/
+
 tsconfig.json
-tsconfig-spec.json
 tslint.json
+yarn.lock
