--- a/.istanbul.yml
+++ b/.istanbul.yml
@@ -1,7 +1,9 @@
 instrumentation:
-  root: dist
+  root: ./dist-spec
   include-all-sources: true
   verbose: true
-  excludes: ['spec/**']
+  excludes: ['**/*.spec.js', '**/spec/**/*.js', '**/build/**/*.js']
 reporting:
   dir: 'coverage'
+  reports:
+    - lcov
