chore: add options to test script to run only one set of tests
kevinphelps/typescript-boilerplate@686d48cd0344d567abe0bff96842619104fb74a4

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "lint": "ts-node ./build/lint.ts",
     "build": "ts-node ./build/build.ts",
+    "test": "ts-node ./build/test.ts",
     "print-coverage": "istanbul report -t text",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
     "prepublishOnly": "yarn run build"
